// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Loader > snapshots > matches snapshot with children 1`] = `
<DocumentFragment>
  <div
    class="sc-egkSDF doeFIt aje-loader is-medium"
    data-placement="center"
  >
    <div
      class="sc-blHHSb bOYlKO aje-flex"
    >
      Loading...
    </div>
  </div>
</DocumentFragment>
`;

exports[`Loader > snapshots > matches snapshot without children 1`] = `
<DocumentFragment>
  <div
    class="sc-egkSDF doeFIt aje-loader is-medium"
    data-placement="center"
  >
    <div
      class="sc-blHHSb bOYlKO aje-flex"
    />
  </div>
</DocumentFragment>
`;
